# swe-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: agent.py  cli.py  coverage.py  dependencies.py  llm_test_writer.py  pipeline.py  planner.py  pr_creator.py  report_sarif.py  test_generation_pipeline.py  test_suggester.py
src/swe_agent/: agent.py  analyze.py  cli.py  cli_v1.py  config.py  coverage_parser.py  llm_test_writer.py  pipeline.py  planner.py  report_md.py  test_generation_pipeline.py  tool_executor.py
tests/: test_analyze.py  test_coverage.py  test_coverage_parser.py  test_dependencies.py  test_llm_test_writer.py  test_pipeline.py  test_pr_creator.py  test_report_md.py  test_test_suggester.py
